# bug-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml
static/: app.js  index.html
tests/: conftest.py  test_api.py  test_e2e.py
